# aisec-workshop

./: .gitignore  README.md  pyproject.toml  walkthrough.ipynb
bbot_agent/: cli.py
bbot_agent/prompts/: __init__.py  operator.py  screenshot.py  suggest.py
bbot_agent/tools/: __init__.py  bbot.py  docker.py  highlight.py  neo4j.py  task.py  todo.py
